--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.1.0
-flask-cors==5.0.0
-openai==0.27.0
-youtube-transcript-api==0.5.0
+Flask
+flask-cors
+openai
+youtube-transcript-api
+gunicorn
